--- a/conf/web.conf
+++ b/conf/web.conf
@@ -8,5 +8,10 @@ server {
     root /var/www;
 
     charset utf-8;
+
+    #以下API用
+    location /api/rooms {
+        proxy_pass http://ap:6000/api/rooms;
+    }
     
 }
