Sign In With Googleボタン実装

--- a/conf/web.conf
+++ b/conf/web.conf
@@ -13,5 +13,11 @@ server {
     location /api/rooms {
         proxy_pass http://ap:6000/api/rooms;
     }
+    location /api/users {
+        proxy_pass http://ap:6000/api/users;
+    }
+    location /api/signIn {
+        proxy_pass http://ap:6000/api/signIn;
+    }
     
 }
