フォームの送信成功

--- a/conf/web.conf
+++ b/conf/web.conf
@@ -19,5 +19,11 @@ server {
     location /api/signIn {
         proxy_pass http://ap:6000/api/signIn;
     }
+    location /api/registrationCheck {
+        proxy_pass http://ap:6000/api/registrationCheck;
+    }
+    location /api/register {
+        proxy_pass http://ap:6000/api/register;
+    }
     
 }
