静的ファイルへのルーティング追加

--- a/conf/web.conf
+++ b/conf/web.conf
@@ -25,5 +25,8 @@ server {
     location /api/register {
         proxy_pass http://ap:6000/api/register;
     }
+    location /api/static/room {
+        proxy_pass http://ap:6000/api/static/room;
+    }
     
 }
