--- a/conf/web.conf
+++ b/conf/web.conf
@@ -25,6 +25,9 @@ server {
     location /api/register {
         proxy_pass http://ap:6000/api/register;
     }
+    location /api/upload {
+        proxy_pass http://ap:6000/api/upload;
+    }
     location /api/static/room {
         proxy_pass http://ap:6000/api/static/room;
     }
