--- a/conf/ssl.conf
+++ b/conf/ssl.conf
@@ -1,9 +1,37 @@
 ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 
 server {
+
 	listen 443;
 	ssl on;
+
+    root /var/www;
+
+    charset utf-8;
+
 	server_name www.yuri-kabe.com;
-	ssl_certificate /etc/nginx/conf.d/server.pem; # サーバー証明書のパス
-	ssl_certificate_key /etc/nginx/conf.d/server.key; # 秘密鍵のパス
+	ssl_certificate /etc/nginx/conf.d/server.pem; 
+	ssl_certificate_key /etc/nginx/conf.d/server.key; 
+
+    location /api/rooms {
+        proxy_pass http://ap:6000/api/rooms;
+    }
+    location /api/users {
+        proxy_pass http://ap:6000/api/users;
+    }
+    location /api/signIn {
+        proxy_pass http://ap:6000/api/signIn;
+    }
+    location /api/registrationCheck {
+        proxy_pass http://ap:6000/api/registrationCheck;
+    }
+    location /api/register {
+        proxy_pass http://ap:6000/api/register;
+    }
+    location /api/upload {
+        proxy_pass http://ap:6000/api/upload;
+    }
+    location /api/static/room {
+        proxy_pass http://ap:6000/api/static/room;
+    }
 }
