再生回数実装

--- a/conf/ssl.conf
+++ b/conf/ssl.conf
@@ -30,6 +30,9 @@ server {
     location /api/upload {
         proxy_pass http://ap:6000/api/upload;
     }
+    location /api/countViews {
+        proxy_pass http://ap:6000/api/countViews;
+    }
     location /api/static/room {
         proxy_pass http://ap:6000/api/static/room;
     }
