camのpose推定成功

--- a/conf/web.conf
+++ b/conf/web.conf
@@ -34,5 +34,8 @@ server {
     location /api/static/room {
         proxy_pass http://ap:6000/api/static/room;
     }
+    location /api/pos2vmd {
+        proxy_pass http://pose:5000/pyapi/pos2vmd;
+    }
     
 }
