--- a/conf/ssl.conf
+++ b/conf/ssl.conf
@@ -38,4 +38,7 @@ server {
     location /api/static/room {
         proxy_pass http://ap:6000/api/static/room;
     }
+    location /api/pos2vmd {
+        proxy_pass http://pose:5000/pyapi/pos2vmd;
+    }
 }
